--- a/test/test.html
+++ b/test/test.html
@@ -2,14 +2,14 @@
 <head>
     <meta charset="utf-8">
     <title>Mocha Tests</title>
-    <link rel="stylesheet" href="./bower_components/mocha/mocha.css" />
+    <link rel="stylesheet" href="../bower_components/mocha/mocha.css" />
 
-    <script src="./bower_components/chai/chai.js"></script>
-    <script src="./bower_components/mocha/mocha.js"></script>
+    <script src="../bower_components/chai/chai.js"></script>
+    <script src="../bower_components/mocha/mocha.js"></script>
     <!-- ??
     <script src="expect.js"></script>
     -->
-    <script src="./lang.js"></script>
+    <script src="../src/lang.js"></script>
 
 </head>
 <body>
